pkg/testdata/TestPatchDestinationRule/use-cases/Overlay-with-consistentHash-disabled.patch.yaml
spec:
  host: istio-shipping.service-mesh.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
      localityLbSetting:
        enabled: true
