pkg/testdata/TestPatchDestinationRule/use-cases/Overlay-with-consistentHash-enabled.patch.yaml
spec:
  host: istio-shipping.service-mesh.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpHeaderName: "header-name"
