pkg/testdata/TestPatchDestinationRule/use-cases/Overlay-with-non-matching-host.patch.yaml
spec:
  host: whatever.service-mesh.svc.cluster.local
  trafficPolicy:
    outlierDetection:
      baseEjectionTime: 1h
      consecutive5xxErrors: 1
    connectionPool:
      tcp:
        maxConnections: 100
      http:
        http2MaxRequests: 100
    loadBalancer:
      warmupDurationSecs: 3m
